2007-10-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	More exact handling of thumbnail up_to_date-ness, including
	if loading a thumbnail fails.
	Return thumbnails of the right size.
	
        * libnautilus-private/nautilus-thumbnails.[ch]:
	Add nautilus_thumbnail_unframe_image and export
	frame element sizes as defines

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-directory-async.c:
        Export nautilus_file_should_show_thumbnail and use it as needed in the
	thumbnail reading code

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-attributes.h:
	Add NAUTILUS_FILE_ATTRIBUTE_THUMBNAIL attribute
	
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
	Load thumbnails asynchronosuly.
	
        * libnautilus-private/nautilus-file.c:
	Initial code to use the asynchronoulsy loaded thumbnail
	
        * libnautilus-private/nautilus-icon-factory.c:
	Add NAUTILUS_FILE_ATTRIBUTE_THUMBNAIL as a required attribute for
	icons

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Read thumbnail info from gio

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c (nautilus_file_get_gicon):
	Handle accept, visited and embedding text state and
	rewrite the icon as needed.
	
        * libnautilus-private/nautilus-icon-info.c:
        (nautilus_icon_info_finalize):
	Fix crash if pixbuf is NULL

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am: